--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,4 @@ org.gradle.jvmargs=-Xmx1G
 # Dependencies
 	# check this on https://modmuss50.me/fabric.html
 	fabric_version=0.87.0+1.20.1
+	cca_version=5.2.2
