--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -17,20 +17,6 @@ permissions:
   contents: read
 
 jobs:
-  gradle:
-    strategy:
-      matrix:
-        os: [windows-latest]
-    runs-on: ${{ matrix.os }}
-    steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-java@v3
-      with:
-        distribution: temurin
-        java-version: 11
-        
-    - name: Setup Gradle
-      uses: gradle/gradle-build-action@v2
   build:
 
     runs-on: ubuntu-latest
@@ -44,10 +30,10 @@ jobs:
         distribution: 'temurin'
       
     - name: Validate Gradle wrapper
-      uses: gradle/wrapper-validation-action@ccb4328a959376b642e027874838f60f8e596de3
+      uses: gradle/wrapper-validation-action@v2
       
     - name: Build with Gradle
-      uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25 # v2.6.0
+      uses: gradle/gradle-build-action@v2 # v2.6.0
       with:
         arguments: build
     - uses: actions/upload-artifact@v3
