--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,11 +17,12 @@ jobs:
       - name: checkout repository
         uses: actions/checkout@v2
       - name: validate gradle wrapper
-        uses: gradle/wrapper-validation-action@v2
+        uses: gradle/wrapper-validation-action@v1
       - name: setup jdk 17
         uses: actions/setup-java@v2
         with:
           java-version: 17
+          distribution: 'temurin'
       - name: make gradle wrapper executable
         if: ${{ runner.os != 'Windows' }}
         run: chmod +x ./gradlew
