--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
       - name: setup jdk 17
         uses: actions/setup-java@v3
         with:
-          java-version: 17
+          java-version: '17'
           distribution: 'temurin'
       - name: make gradle wrapper executable
         if: ${{ runner.os != 'Windows' }}
@@ -30,7 +30,7 @@ jobs:
         run: ./gradlew build
       - name: capture build artifacts
         if: ${{ runner.os == 'Linux' && matrix.java == '17' }} # Only upload artifacts built from latest java on one OS
-        uses: actions/upload-artifact@master
+        uses: actions/upload-artifact@v3
         with:
           name: Artifacts
           path: build/libs/
